--- a/styles.css
+++ b/styles.css
@@ -68,7 +68,7 @@ body {
   align-items: center;
   justify-content: center;
   font: var(--caption);
-  padding: var(--m) var(--l);
+  padding: var(--m) var(--xl);
   border-radius: var(--l);
   border: 2px solid var(--gray-200);
   background: none;
@@ -96,7 +96,7 @@ body {
 }
 
 .btn--primary--outline {
-  background: transparent;  
+  background: var(--primary-100);  
   border: 2px solid var(--primary-500);
   color: var(--primary-500);
 }
@@ -147,6 +147,7 @@ body {
   border: 2px solid var(--gray-200);
   color: var(--gray-300);
   cursor: not-allowed;
+  text-decoration: line-through;
 }
 
 .title {
@@ -158,7 +159,7 @@ body {
 h1 {
   font: var(--heading1);
   color: var(--gray-700);
-  margin: var(--xl) 0 var(--m) 0;
+  margin: var(--l) 0 var(--m) 0;
 }
 
 h2 {
@@ -261,6 +262,11 @@ input:focus::placeholder {
   padding: var(--l);
   border-radius: var(--l);
   border: 2px solid var(--gray-200);
+}
+
+.plate_type_items {
+  display: flex;
+  gap: var(--m);
 }
 
 main.app {
